# NonVirtualInterfacePattern

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doxy/: NonVirtualInterfacePatternNew.doxyfile
inc/: Rectangle.h  Shape.h  Square.h  Triangle.h
src/: Rectangle.cpp  Shape.cpp  Square.cpp  Triangle.cpp
